--- a/SerilogPoc/packages.config
+++ b/SerilogPoc/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net462" />
   <package id="Autofac" version="4.1.1" targetFramework="net462" />
+  <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net462" />
+  <package id="AutofacSerilogIntegration" version="1.0.12" targetFramework="net462" />
   <package id="bootstrap" version="3.0.0" targetFramework="net462" />
   <package id="jQuery" version="1.10.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net462" />
@@ -25,5 +27,6 @@
   <package id="Serilog.Sinks.PeriodicBatching" version="2.0.0" targetFramework="net462" />
   <package id="Serilog.Sinks.RollingFile" version="3.0.0" targetFramework="net462" />
   <package id="Serilog.Sinks.Seq" version="3.0.1" targetFramework="net462" />
+  <package id="SerilogWeb.Classic" version="2.0.10" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net462" />
 </packages>
