Demonstrate use of SelfLog to output Serilog internal exceptions, using a bad Seq URL.

--- a/SerilogPoc/Web.config
+++ b/SerilogPoc/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
     <!-- This is the default installation URL of the installation of Seq. Feel free to adjust to whatever site/port you want. -->
-    <add key="SeqUrl" value="http://localhost:5341/" />
+    <add key="SeqUrl" value="http://iamabadurl:5341/" />
     
   </appSettings>
   <system.web>
